# procmon-reader

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_publish.yml  build_only.yml
procmon_reader/: __init__.py  filters.py  reader.py
procmon_reader/cpp/: _pml_core.cpp  pml_consts.h  pml_consts_ntstatus.h  pml_detail.h  pml_detail_common.h  pml_detail_filesystem.cpp  pml_detail_network.cpp  pml_detail_process.cpp  pml_detail_registry.cpp  pml_enums.h  pml_filter_core.cpp  pml_filter_core.h  pml_format.h  pml_preprocess.h  pml_reader.cpp  pml_reader.h  pml_types.h  pml_utils.h  procmon_reader.cpp  procmon_reader.h
tests/: run_tests.py  test_commom.py  test_event.py  test_event_alias.json  test_event_cases.json  test_event_dsl_multi_repeat.json  test_event_dsl_multi_unique.json  test_event_dsl_single.json  test_event_procmon_multi_repeat.json  test_event_procmon_multi_unique.json  test_event_procmon_single.json  test_process.py
tests/manual/: filter_event.py  read_event.py  read_processes.py  test_filter_against_procmon_xml.py
tools/: gen_ntstatus_lut.py
